<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="adMobId">ca-app-pub-4082522619366895/7023283761</string>
	<string name="adMobHomeInsterstitial">ca-app-pub-4082522619366895/1887649769</string>
    <string name="app_name">HoneyDew-It</string>
    <string name="calculators">Calculators</string>
    <string name="numDegrees"># of Degrees</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="units">Units:</string>
    <string name="lists">Lists</string>
    <string name="main_no_items">No Items to Display</string>
    <string name="listNameTxt">List Name:</string>
    <string name="enterListName">Enter list name here</string>
    <string name="storeName">Store Name:</string>
    <string name="enterStoreName">Enter store name here</string>
    <string name="timezone">Time zone</string>
    <string name="remindersTxt">Reminders</string>
    <string name="countryTxt">Country:</string>
    <string name="addressLine1Txt">Address Line 1:</string>
    <string name="addressLine2Txt">Address Line 2:</string>
    <string name="addressLine3Txt">Address Line 3:</string>
    <string name="addressLine4Txt">Address Line 4:</string>
    <string name="cityTxt">City:</string>
    <string name="state_provinceTxt">State/Province:</string>
    <string name="postalCodeTxt">Postal Code:</string>
    <string name="phoneTxt">Phone:</string>
    <string name="reminder">Reminder Date/Time:</string>
    <string name="save">Save</string>
    <string name="addReminder">Add Reminder(s)</string>
    <string name="setDate">Set Reminder</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="itemNameTxt">Item Name:</string>
    <string name="enterItemName">Enter item name here</string>
    <string name="quantityTxt">Quantity:</string>
    <string name="enterQuantity">#</string>
    <string name="unitPriceTxt">Unit Price:</string>
    <string name="enterUnitPrice">Enter unit price here</string>
    <string name="discountTxt">Discount</string>
    <string name="descriptionTxt">Description:</string>
    <string name="enterDescription">Enter Description Here</string>
    <string name="amount">Amount</string>
    <string name="unitTxt">Unit Type:</string>
    <string name="enterUnitType">Enter Unit Type:</string>
    <string name="calendar">Calendar</string>
    <string name="previousYear">Previous Year</string>
    <string name="nextYear">Next Year</string>
    <string name="nextMonth">Next Month</string>
    <string name="previousMonth">Previous Month</string>
    <string name="calendarHeader">Calendar Header</string>
    <string name="event">Event</string>
    <string name="events">Events For ?</string>
    <string name="allDay">All Day</string>
    <string name="repeat">Repeat</string>
    <string name="reminders">Reminders</string>
    <string name="noCalendarChosen">No calendar has been chosen</string>
    <string name="repeatUntil">Until Date</string>
    <string name="repeatRep">By Repetitions</string>
    <string name="delete">Delete</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="changeDate">Change Date</string>
    <string name="currentDate">Current Date (M-D-YYYY): </string>
    <string name="frequency">Frequency: </string>
    <string name="every">Every: </string>
    <string name="onThe">On The:</string>
    <string name="each">Each: </string>
    <string name="recurrence">Recurrence: </string>
    <string name="addEditReminder">Add/Remove Reminders</string>
    <string name="name">Name: </string>
    <string name="enterNameTitle">Please enter a name:</string>
    <string name="monthNav">Calendar Navigation:</string>
    <string name="replace">Replace</string>
    <string name="xlsFile">XLS\\XLSX file:</string>
    <string name="txtCsvFile">Text or csv files:</string>
    <string name="hideImportDialog">Click to hide this dialog next time.</string>
    <string name="menuImg">Menu Image</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide"> / </string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonDelete">DEL</string>
    <string name="saveTitle">Save?</string>
    <string name="noFutureEvent">No future events exist.</string>
    <string name="error">Error</string>
    <string name="newEvent">New Event</string>
    <string name="pleaseNote">Please Note:</string>
    <string name="dontSave">Don\'t Save</string>
    <string name="addItem">Add</string>
    <string name="createList">Create List</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="areYouSureCancelImport">Are you sure you want to cancel the import?</string>
    <string name="noteText">Note:</string>
    <string name="enterNote">Enter note here:</string>
	<string name="eventsDay">Events/Day</string>
	<string name="start_new">New</string>
	<string name="brush">Brush</string>
	<string name="erase">Erase</string>
	<string name="paint">Paint</string>
	<string name="xsml">Extra Smaill</string>
	<string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>
	<string name="addItemDraw">Draw Note</string>
    <string name="addItemCamera">Take Pic</string>
	<string name="addItemType">Type Note</string>
	<string name="noteImage">Note Image</string>
	<string name="previous">Previous ?</string>
	<string name="replaceCurrentList">Replace the existing list</string>
	<string name="renameNewList">Rename the new list</string>
	<string name="ignoreErrors">Remove \nItems</string>
	<string name="showErrors">Fix \nErrors</string>
	<string name="importList">Import</string>
	<string name="editSheetBtn">Edit Sheet Name</string>
	<string name="row">Row:</string>
	<string name="yes">Yes</string>
	<string name="shareItem">Share</string>
	<string name="numItems">Total Items Checked: </string>
	<string name="totalPrice">Total Price Checked: </string>
	<string name="numItemsUnique">Items: </string>
	<string name="undoSelectedSheet">Clicking "Cancel" will cancel the selection of the sheet.</string>
	<string name="image">Image:</string>
	<string name="takePhoto">Take a Photo</string>
	<string name="clickForDate">Click to Set Date</string>
	<string name="imageCancelled">Cancelled</string>
	<string name="imageChoice">Do you want to replace or delete image?</string>
	<string name="close">Close</string>
	<string name="no">No</string>
    <string name="dontShow">Don\'t show again.</string>
    <string name="sendReport">Send Report</string>
    <string name="goHome">Go Home</string>
    <string name="back">Back</string>
    <string name="calculateQty">Calculate Qty</string>
    <string name="set">Set</string>
    <string name="MC">MC</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="zero">0.0</string>
    <string name="edit">Edit</string>
    <string name="cancelImportMessage">By clicking \"Cancel\" you will cancel the import process</string>
    <string name="takeRetakeImage">Take/Retake Picture</string>
    <string name="title_activity_note_image">NoteImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="imageSaveError">You must take a photo in order to save.</string>
    <string name="descriptionLengthError">If you enter a description it must be at least 3 characters.</string>
    <string name="clear">Clear</string>
    <string name="view">View</string>
    <string name="dontAskAgain">Don\'t ask again</string>
    <string name="editReminder">Edit Reminder</string>
    <string name="importInstructions">Importing Instructions</string>
    <string name="menu">Menu</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="renameList">Rename List:</string>
    <string name="shareList">Share List</string>
    <string name="deleteList">Delete List</string>
    <string name="selectAll">Select All</string>
    <string name="unselectAll">Unselect All</string>
    <string name="dontCancel">Don\'t Cancel</string>
    <string name="importStarted">import started for list:</string>


</resources>