<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
	
	<TextView android:id="@+id/message" android:layout_width="fill_parent" android:layout_height="wrap_content"  ></TextView>
    
    <RadioGroup
        android:id="@+id/duplicateListRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:visibility="gone">

        <RadioButton
            android:id="@+id/replaceRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/replaceCurrentList" />

        <RadioButton
            android:id="@+id/renameRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renameNewList" />

    </RadioGroup>
	
    
    <EditText
        android:id="@+id/listNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterListName"
        android:inputType="text"
        android:visibility="invisible"
/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" 
       >


        <Button

            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/ok" />

    </LinearLayout>
	
</LinearLayout>