<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
	    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="1">
			<TextView android:id="@+id/recTitle" android:layout_alignParentStart="true" android:layout_alignParentTop="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/recurrence"/>
			<TextView android:id="@+id/freqText" android:layout_below="@+id/recTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/frequency" />
			<Spinner  android:layout_below="@+id/recTitle" android:id="@+id/frequencies" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toEndOf="@id/freqText"/>
			<TextView android:id="@+id/everyTxt" android:layout_below="@+id/frequencies" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/every" />
			<EditText android:id="@+id/everyNum" android:layout_below="@+id/frequencies" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="5" android:inputType="number" android:layout_toEndOf="@id/everyTxt"/>
			<TextView android:text="" android:layout_below="@+id/frequencies" android:id="@+id/everyText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toEndOf="@id/everyNum"/>
			<RadioGroup android:layout_below="@+id/everyNum" android:id="@+id/recurrenceRadioGroup" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center">
				<RadioButton android:text="@string/each" android:id="@+id/eachRadio" android:layout_width="wrap_content" android:layout_height="wrap_content"   android:layout_weight="1"  android:layout_gravity="center|left"/>
				<RadioButton android:id="@+id/onTheRadio" android:text="@string/onThe"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center|right"/>    
			</RadioGroup>
			<com.honeydewit.calendar.customviews.ExpandableHeightGridView android:layout_height="wrap_content" android:layout_below="@+id/recurrenceRadioGroup" android:id="@+id/frequencyGrid"  android:numColumns="7" android:layout_width="fill_parent" android:horizontalSpacing="2sp" android:verticalSpacing="2sp"/>
			
			<Spinner android:layout_below="@+id/recurrenceRadioGroup" android:id="@+id/weeksSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<Spinner android:layout_below="@+id/recurrenceRadioGroup" android:layout_toRightOf="@+id/weeksSpinner" android:id="@+id/daysSpinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</RelativeLayout>
    </TableRow>
    <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button style="?android:attr/buttonBarButtonStyle" android:id="@+id/btn_no"  android:layout_width="0dip" android:layout_weight=".5" android:layout_height="wrap_content" android:text="@string/cancel" />	  
    	<Button style="?android:attr/buttonBarButtonStyle" android:id="@+id/btn_yes" android:layout_width="0dip" android:layout_weight=".5" android:layout_height="wrap_content" android:text="@string/ok" />  
    </TableRow>
</TableLayout>
