<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">


    <ScrollView
        style="@style/scrollbar_shape_style"
        android:id="@+id/itemContent"
        android:layout_below="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/RLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2" >

            <TableRow>

                <TextView
                    android:id="@+id/noteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noteText" 
                    android:layout_weight="2"/>
                
            </TableRow>
			<TableRow>
                <EditText
                    android:id="@+id/note"
                    android:layout_width="0dp"
                    android:hint="@string/enterNote"
                    android:lines="4"
                    android:layout_weight="2"
                    />
            </TableRow>

            <TableRow>
				<Button style="?android:attr/buttonBarButtonStyle" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="1"  android:id="@+id/cancelBtn"   android:text="@string/cancel"/>
	     		<Button style="?android:attr/buttonBarButtonStyle"  android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="1" android:id="@+id/saveBtn"     android:text="@string/save"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>