<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity"
	android:layout_margin="@dimen/margin"
	 >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_gravity="center"
		android:orientation="horizontal" >

		<ImageButton
			android:id="@+id/draw_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:contentDescription="@string/brush"
			android:src="@drawable/brush"
			android:background="@drawable/no_background"/>

		<ImageButton
			android:id="@+id/erase_btn"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:contentDescription="@string/erase"
			android:src="@drawable/eraser"
			android:background="@drawable/no_background"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/paint_shader"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center">

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FF660000"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FF660000" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FFFF0000"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FFFF0000" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FFFF6600"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FFFF6600" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FFFFCC00"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FFFFCC00" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FF009900"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FF009900" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FF009999"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FF009999" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FF0000FF"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FF0000FF" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FF990099"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FF990099" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FFFF6666"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FFFF6666" />

		<ImageButton
			android:layout_width="@dimen/paint_color_size"
			android:layout_height="@dimen/paint_color_size"
			android:background="#FF000000"
			android:contentDescription="@string/paint"
			android:onClick="paintClicked"
			android:src="@drawable/paint"
			android:tag="#FF000000" />
	</LinearLayout>

	<!-- Custom View -->

	<ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF787878"
        android:contentDescription="@string/paint"
        android:onClick="paintClicked"
        android:src="@drawable/paint"
        android:tag="#FF787878"
		android:layout_gravity="right" />

	<com.ajbtechnologies.customviews.DrawingView
		android:id="@+id/drawing"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:background="#FFFFFFFF" />

	<!-- Color Palette -->

		<!-- Top Row -->


	<LinearLayout
		android:id="@+id/buttonBar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="3">

		<Button android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/cancelBtn"   android:text="@string/cancel"/>
		<Button android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/clearBtn"   android:text="@string/clear"/>
		<Button android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/saveBtn"   android:text="@string/save"/>

	</LinearLayout>
</LinearLayout>