<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/item_background"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:id="@+id/buttonLayout">

        <ImageButton
            android:contentDescription="@string/main_no_items"
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_small"
            android:background="@drawable/no_background"
            android:layout_gravity="right|center_vertical"
            />
        <ImageView
            android:id="@id/drag_handle"
            android:background="@drawable/drag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="right|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/leftLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:layout_toLeftOf="@id/buttonLayout">

        <CheckBox android:layout_gravity="center_vertical" android:id="@+id/checked" android:layout_width="wrap_content" android:layout_height="wrap_content" />

        <ImageView android:layout_gravity="center_vertical" android:contentDescription="@string/noteImage" android:id="@+id/noteImage" android:layout_width="40dp" android:layout_height="40dp" android:visibility="gone"/>



        <LinearLayout android:orientation="horizontal" android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/mainLayout"
            android:layout_gravity="center_vertical">

            <TextView
                android:textIsSelectable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteText"/>

            <TextView
                android:id="@+id/topRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>